--- a/thesis/SA - Arabic.lyx
+++ b/thesis/SA - Arabic.lyx
@@ -6913,7 +6913,7 @@ Flexion of function words
 
 \begin_layout Standard
 When it comes to flexing the particles.
- we distinguish two categories:
+ We distinguish two categories:
 \end_layout
 
 \begin_layout Itemize
@@ -12167,10 +12167,6 @@ key "Alb09"
 
 \end_inset
 
-
-\end_layout
-
-\begin_layout Standard
 
 \end_layout
 
