--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -16,7 +16,26 @@
       year = { 2012}
      }
 
+@WEB{Techulator,
+      key = {Techulator},
+      link = {http://www.techulator.com/resources/5933-What-Semantic-Search.aspx},
+      title = {What is Semantic Search?},
+      year = { 2012}
+     }
 
+@WEB{WSJ,
+      key = {WSJ},
+      link = {http://online.wsj.com/article/SB10001424052702304459804577281842851136290.html},
+      title = {Google Gives Search a Refresh},
+      year = { 2012}
+     }
+
+@WEB{ESWC2012,
+      key = {ESWC2012},
+      link = {http://www.springerlink.com/content/k6022745421q1l5h/},
+      title = {Domain Specific Data Retrieval on the Semantic Web},
+      year = {2012}
+     }
 
 
 @WEB{mbayan,
